grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__char_set_escape.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"([a-zA-\\U{45}_] )\", 100)"
---
Ok(
    Concat(
        [
            CharSet(
                [
                    Range(
                        'a',
                        'z',
                    ),
                    Range(
                        'A',
                        'E',
                    ),
                    Char(
                        '_',
                    ),
                ],
            ),
            Char(
                ' ',
            ),
        ],
    ),
)
